zech.sh/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zech-sh
  labels:
    app: zech-sh
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zech-sh
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: zech-sh
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: zech-sh
      containers:
        - name: zech-sh
          image: zzmmrmn/zech-sh:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          startupProbe:
            httpGet:
              path: /healthz/
              port: 8080
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /healthz/
              port: 8080
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz/
              port: 8080
            periodSeconds: 10
            failureThreshold: 2
