zech.sh/k8s/redirect-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-dump-zech-sh
spec:
  redirectRegex:
    regex: "^https?://(?:blog\\.zech\\.codes|zech\\.codes)(.*)"
    replacement: "https://dump.zech.sh${1}"
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zech-codes-redirect-ingress
  labels:
    app: zech-sh
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: zechcodes-redirect-to-dump-zech-sh@kubernetescrd
spec:
  tls:
    - hosts:
        - zech.codes
        - blog.zech.codes
      secretName: zech-codes-tls
  rules:
    - host: zech.codes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zech-sh
                port:
                  number: 8080
    - host: blog.zech.codes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zech-sh
                port:
                  number: 8080
